# echo

./: .gitignore  Cargo.toml  README.md  README.zh.md  README.zht.md  release.md  scratch.rs  scratch2.rs
.github/workflows/: ci.yml  publish.yml
assets/: echo-launcher  echo.desktop  echo.desktop.hbs  install.sh
icons/: icon.icns
locales/: en.json  zh-CN.json  zh-TW.json
src/: app.rs  apply_worker_event.rs  config.rs  events.rs  i18n.rs  image_tasks.rs  main.rs  models.rs  platform.rs
src/apply_worker_event/: artist.rs  auth.rs  data.rs  images.rs  library.rs  misc.rs  mod.rs  playback.rs
src/handlers/: artist_page.rs  browse.rs  command.rs  keymap.rs  mod.rs  navigation.rs  normal.rs  search.rs  setup.rs  tracklist.rs  visual.rs
src/handlers/normal/: mod.rs  modals.rs  prompts.rs
src/tui/: artist.rs  layout.rs  library.rs  mod.rs  playback.rs  queue.rs  render.rs  search.rs
src/worker/: artist_page.rs  audio.rs  browse.rs  errors.rs  local_files.rs  local_playback.rs  media.rs  mod.rs  spotify.rs  tracks.rs  visualization.rs
src/worker/api/: cache.rs  client.rs  first_party.rs  library.rs  lyrics.rs  mod.rs  parse.rs  playback.rs  policy.rs  rate_limit.rs  search.rs
themes/: amethyst.toml  cloud.toml  crimson.toml  custom.toml  cyber_citrus.toml  default.toml  echo.toml  everforest.toml  garden.toml  gruvbox.toml  jade.toml  neon.toml  noir.toml  sea_foam.toml  tokyo_night.toml  vanilla.toml  wave.toml
