[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.10"
futures-util = "0.3.32"
image = "0.25.10"
librespot-connect = { git = "https://github.com/librespot-org/librespot" }
librespot-core = { git = "https://github.com/librespot-org/librespot" }
librespot-discovery = { git = "https://github.com/librespot-org/librespot" }
librespot-oauth = { git = "https://github.com/librespot-org/librespot" }
librespot-playback = { git = "https://github.com/librespot-org/librespot", features = ["rodio-backend"] }
lofty = "0.24.0"
notify = "8.2.0"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["image-defaults", "crossterm"] }
reqwest = { version = "0.13.4", features = ["json"] }
rodio = "0.21.1"
urlencoding = "2.1.3"
rspotify = { version = "0.16.1", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.2"
webbrowser = "1.2.1"
rustfft = "6.4.1"
parking_lot = "0.12.5"
souvlaki = "0.8.3"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58.0"
features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_LibraryLoader",
	"Win32_UI_WindowsAndMessaging",
]

[package.metadata.packager]
product-name = "Echo"
identifier = "com.echo.app"
publisher = "Echo"
category = "Music"
icons = [
    "icons/icon.icns",
    "icons/icon.ico",
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/icon.png",
    "icons/128x128@2x.png"
]
resources = [
    { src = "themes", target = "themes" },
    { src = "assets/install.sh", target = "install.sh" },
    { src = "assets/echo.desktop", target = "echo.desktop" },
    { src = "assets/echo-rs.svg", target = "echo.svg" },
]
before-packaging-command = "cargo build --release"

[package.metadata.packager.deb]
desktop_template = "assets/echo.desktop.hbs"
depends = ["libssl3", "libasound2", "libdbus-1-3"]
